    playback when using the board. (DhrBaksteen)
  - Updated the Tiny File Dialog library to the latest
    version v3.8.5, which fixes issues such as the
    compatibility problem with Windows XP. (Wengier)
  - Updated FLAC and WAV CD-DA decoder libraries to the
    latest versions (0.12.26 and 0.12.18 respectively;
    per David Reid). (Wengier)
  - Integrated SVN commits (Allofich)
    - r4392: Improve capturing of Zeliard and fix a
    few percussion-related capturing problems as well.
    - r4393: Remove video page check when drawing
    internal mouse pointer, as the BIOS current page
    is not updated in some cases. Fixes QQP games: Lost
    Admiral, Conquered Kingdoms, and Solitaire's
    Journey. Also be a bit smarter about enabling
    autolock, supporting more cases where the mouse
    is used for input without resetting it.
    - r4399: Finish up and add LOOP_NE and LOOP_E for
    core_dyn_x86.
    - r4401: Improve xchg to handle unwritable memory
    better for core_dyn_x86.

0.83.9
  - Physical CD drives are now mountable in SDL2 builds
    just like SDL1 builds, so commands like "MOUNT -CD"
    should work in both SDL1 and SDL2 builds. Some code
    is adopted from the SDL2_CDROM library. (Wengier)
  - Implemented file locking support for mounting disk
    image files so that you cannot mount the same disk
    image files in read/write mode at the same time as
    this can cause possible disk corruptions. A config
    option "locking disk image mount" is added to the
    [dosbox] section which when set to false (or if the
    user mounts the image files read-only) will bypass
    the locking of image files. Also improved the DOS
    file locking function, which can be disabled by
    setting "share=false" in [dos] section. (Wengier)
  - Implemented PhysFS support so that you can mount
    archives (e.g. ZIP/7Z) as drives in read-only mode,
    e.g. "MOUNT C TEST.ZIP" or "MOUNT D FILES.7Z". Some
    code is ported from a custom DOSBox fork. The menu