@@ -222,7 +222,7 @@ Bits CPU_Core_Simple_Trap_Run(void) {
     cpu.trap_skip = false;
 
     Bits ret=CPU_Core_Simple_Run();
-    if (!cpu.trap_skip) CPU_HW_Interrupt(1);
+    if (!cpu.trap_skip) CPU_DebugException(DBINT_STEP,reg_eip);
     CPU_Cycles = oldCycles-1;
     cpudecoder = &CPU_Core_Simple_Run;
 
