@@ -972,6 +972,11 @@ doexception:
 	return CPU_PrepareException(EXCEPTION_GP,0);
 }
 
+void CPU_DebugException(Bit32u triggers,Bitu oldeip) {
+  cpu.drx[6] = (cpu.drx[6] & 0xFFFF1FF0) | triggers;
+  CPU_Interrupt(EXCEPTION_DB,CPU_INT_EXCEPTION,oldeip);
+}
+
 #include <stack>
 
 int CPU_Exception_Level[0x20] = {0};
@@ -1051,6 +1056,10 @@ void CPU_Exception(Bitu which,Bitu error ) {
 
 uint8_t lastint;
 void CPU_Interrupt(Bitu num,Bitu type,uint32_t oldeip) {
+    if (num == EXCEPTION_DB && (type&CPU_INT_EXCEPTION) == 0) {
+      CPU_DebugException(0,oldeip); // DR6 bits need updating
+      return;
+    }
 	lastint=(uint8_t)num;
 	FillFlags();
 #if C_DEBUG
